--- a/clinic/templates/clinic/search_results.html
+++ b/clinic/templates/clinic/search_results.html
@@ -73,7 +73,7 @@
                                     <div class="doctors-list">
                                         {% for doctor in service.doctors.all %}
                                         <div class="doctor-item">
-                                            <img src="{% if doctor.photo %}{{ doctor.photo.url }}{% else %}https://placehold.co/40x40/cdb4db/ffffff?text=DR{% endif %}" 
+                                            <img src="{% if doctor.photo %}{{ doctor.photo.url }}{% else %}{% static 'clinic/images/doctor_placeholder.jpg' %}{% endif %}"
                                                  alt="{{ doctor.first_name }}" class="doctor-avatar">
                                             <div class="doctor-info">
                                                 <span class="doctor-name">{{ doctor.first_name }} {{ doctor.last_name }}</span>
